# exploring-rust-ecosystem

./: .dockerignore  Cargo.toml  LICENSE  readme.adoc
.github/: deploy-grpc-telegram-bot.sh  deploy-mongodb-redis.sh  deploy.sh
.github/workflows/: grpc-telegram-bot.yml  mongodb-redis.yml  workflow.yml
grpc-telegram-bot/: docker-compose.override.yml  docker-compose.yml
grpc-telegram-bot/bot/: .env  Cargo.toml  Dockerfile
grpc-telegram-bot/bot/src/: error.rs  main.rs
grpc-telegram-bot/nginx/: Dockerfile
grpc-telegram-bot/rpc/: Cargo.toml  build.rs
grpc-telegram-bot/rpc/proto/solar-system-info/: solar-system-info.proto
grpc-telegram-bot/server/: Cargo.toml  Dockerfile
grpc-telegram-bot/server/migrations/2021-02-20-104857_init_structure/: down.sql  up.sql
grpc-telegram-bot/server/migrations/2021-02-20-104902_init_data/: down.sql
grpc-telegram-bot/server/src/: conversion.rs  main.rs
grpc-telegram-bot/server/src/persistence/: repository.rs  schema.rs
mongodb-redis/: .env  .env.local  Cargo.toml  Dockerfile  docker-compose.override.yml  docker-compose.yml  readme.adoc
mongodb-redis/mongodb-init/: init.json
mongodb-redis/monitoring/prometheus/: prometheus.yml
mongodb-redis/src/: broadcaster.rs  db.rs  dto.rs  errors.rs  handlers.rs  index.html  main.rs  metrics.rs  model.rs  redis.rs  services.rs
solar-system-info/: .env  docker-compose.override.yml  readme.adoc
solar-system-info/bot/: .env  Cargo.toml  Dockerfile
solar-system-info/bot/src/: conversion.rs  error.rs  main.rs
solar-system-info/nginx/: nginx.conf
solar-system-info/rpc/: Cargo.toml
solar-system-info/rpc/proto/solar-system-info/: solar-system-info.proto
solar-system-info/rpc/src/: lib.rs
solar-system-info/server/: .env  Cargo.toml  Dockerfile
solar-system-info/server/migrations/2021-02-20-104902_init_data/: up.sql
solar-system-info/server/src/: conversion.rs  main.rs
solar-system-info/server/src/persistence/: model.rs  repository.rs  schema.rs
