[package]
name = "mongodb-redis"
version = "0.1.0"
authors = ["Roman Kudryashov <rskudryashov@gmail.com>"]
edition = "2018"

[dependencies]
mongodb = "2.0.1"
redis = { version = "0.21.3", features = ["tokio-comp", "connection-manager"] }
actix-web = "4.0.0-beta.10"
tokio = "1.13.0"
tokio-stream = "0.1.8"
chrono = { version = "0.4.19", features = ["serde"] }
serde = "1.0.130"
serde_json = "1.0.68"
dotenv = "0.15.0"
derive_more = "0.99.16"
log = "0.4.14"
env_logger = "0.9.0"
rust-embed = "6.2.0"
mime = "0.3.16"
