[package]
name = "solar-system-info-bot"
version = "0.1.0"
authors = ["Roman Kudryashov <rskudryashov@gmail.com>"]
edition = "2018"

[dependencies]
solar-system-info-rpc = { path = "../rpc" }
teloxide = { version = "0.5.0", features = ["macros", "auto-send"] }
tonic = "0.5.0"
tokio = { version = "1.8.1", features = ["rt-multi-thread", "macros"] }
futures = "0.3.15"
indoc = "1.0.3"
chrono = { version = "0.4.19", features = ["serde"] }
lazy_static = "1.4.0"
log = "0.4.14"
pretty_env_logger = "0.4.0"
dotenv = "0.15.0"
reqwest = "0.11.4"
