[package]
name = "solar-system-info-server"
version = "0.1.0"
authors = ["Roman Kudryashov <rskudryashov@gmail.com>"]
edition = "2018"

[dependencies]
solar-system-info-rpc = { path = "../rpc" }
tonic = "0.6.1"
prost = "0.9.0"
prost-types = "0.9.0"
tokio = { version = "1.13.0", features = ["rt-multi-thread"] }
tokio-stream = "0.1.8"
futures = "0.3.17"
diesel = { version = "1.4.8", features = ["postgres", "r2d2", "numeric", "chrono"] }
diesel_migrations = "1.4.0"
chrono = { version = "0.4.19", features = ["serde"] }
bigdecimal = "0.1.2"
serde = { version = "1.0.130", features = ["derive"] }
serde_json = "1.0.68"
log = "0.4.14"
env_logger = "0.9.0"
dotenv = "0.15.0"
rust-embed = "6.2.0"
