[package]
name = "solar-system-info-server"
version = "0.1.0"
authors = ["Roman Kudryashov <rskudryashov@gmail.com>"]
edition = "2018"

[dependencies]
solar-system-info-rpc = { path = "../rpc" }
tonic = "0.4.1"
prost = "0.7.0"
prost-types = "0.7.0"
tokio = { version = "1.4.0", features = ["rt-multi-thread"] }
tokio-stream = { version = "0.1.5", features = ["net"] }
futures = "0.3.13"
diesel = { version = "1.4.6", features = ["postgres", "r2d2", "numeric", "chrono"] }
diesel_migrations = "1.4.0"
chrono = { version = "0.4.19", features = ["serde"] }
bigdecimal = "0.1.2"
serde = { version = "1.0.125", features = ["derive"] }
serde_json = "1.0.64"
log = "0.4.14"
env_logger = "0.8.3"
dotenv = "0.15.0"
rust-embed="5.9.0"
